--- a/index.html
+++ b/index.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Invention Template</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>天空百寶盒</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="wrapper">
   <div id="content">
     <div id="header">
       <div id="logo">
-        <h1>logo here</h1>
-        <h4>have your punchline here</h4>
-      </div>
-      <div id="links">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Technology</a></li>
-          <li><a href="#">Contact us</a></li>
+        <! img src="images/logo.jpg" alt="天空百寶盒" width="1024" height="600">
+ 	  <img src="images/logo.jpg" alt="天空百寶盒" width="800" height="200"> 
+      <h4>天空百寶盒</h4>
+    </div>
+    <div id="links">
+      <ul>
+          <li><a href="#">首頁</a></li>
+          <li><a href="collectors.html">收藏家們</a>
+          <li><a href="#">更多浪漫</a></li>
+          <li><a href="#">向我們分享</a></li>
         </ul>
       </div>
     </div>
     <div id="mainimg">
-      <h3>inventions</h3>
-      <h4>for a wireless world</h4>
+      <h3>sky</h3>
+      <h4>天空一直都在，是雲來了又去</h4>
     </div>
     <div id="contentarea">
       <div id="leftbar">
-        <h2>hello!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Ut id nisl nec leo congue fringilla. Suspendisse potenti. Phasellus sed velit eget sapien interdum ultrices. Nullam nec magna. Maecenas cursus. Etiam sapien neque, auctor eu, volutpat at, condimentum et, odio. Morbi id lorem. Nam urna ante, venenatis sed, molestie eu, dictum sit amet, tellus. Phasellus pellentesque magna vitae elit. In dignissim eleifend odio. Curabitur at libero. Donec est justo, pellentesque eu, vulputate feugiat, ultrices quis, nunc. Sed neque. Nulla egestas, risus id consectetuer ultrices, ante turpis posuere ligula, ac pulvinar tortor dui ac odio. Curabitur auctor urna sed purus. In varius.</p>
+        <h2>雲朵收藏家</h2>
+        <p>藍色和白色的碰撞</p>
         <br />
-        <p>Nulla sit amet magna non enim posuere porttitor. Vestibulum ante. Nam et nulla vestibulum libero facilisis aliquet. Vivamus ante velit, facilisis eu, pulvinar nec, ultricies vel, sem. Morbi ac velit. Sed est. Proin vehicula. Maecenas ac pede. Fusce rhoncus. Maecenas at quam. Aenean nunc felis, elementum vel, faucibus vitae, nonummy et, tellus. Nulla auctor venenatis urna. Donec accumsan urna sed libero. Fusce at mi eu leo sollicitudin adipiscing. Ut metus purus, gravida nec, scelerisque quis, venenatis non, ante. Aliquam a leo vel libero tempus scelerisque. Morbi iaculis. Ut libero. </p>
+        <p>嘗試用藍天白雲消磨不好的心情</p>
         <br />
-        <a href="#">more ></a><br />
+	<div id="image-container">
+    
+   	<img src="images/S__38961157.jpg" alt="图片1" width="150" height="100">
+   	<img src="images/S__38961158.jpg" alt="图片2" width="150" height="100">
+    	<img src="images/S__38961163.jpg" alt="图片3" width="150" height="100">
+   	<img src="images/S__38961159.jpg" alt="图片4" width="150" height="100">
+   	<img src="images/S__38961161.jpg" alt="图片5" width="150" height="100">
+    	<img src="images/S__38961160.jpg" alt="图片6" width="150" height="100">
+  </div>
+</div>
+        <a href="#">更多 ></a><br />
         <br />
       </div>
       <div id="rightbar">
-        <h2>latest news</h2>
-        <p><span class="orangetext">12/08/2006</span><br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Utid anisl nec leo congue fringilla. <br />
+        <h2>留言板</h2>
+        <p><span class="orangetext">12/08/2020</span><br />
+         一口吃下棉花糖 <br />
           <br />
-          <span class="orangetext">10/08/2006</span><br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Utid anisl nec leo congue fringilla. <br />
+          <span class="orangetext">10/08/2022</span><br />
+         浪漫在每一個角落 <br />
           <br />
-          <span class="orangetext">28/07/2006</span><br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Utid anisl nec leo congue fringilla. </p>
+          <span class="orangetext">28/07/2023</span><br />
+         零成本的浪漫 </p>
       </div>
     </div>
     <div id="bottom">
       <div id="email"><a href="mailto:info@yourcompany.com">info@yourcompany.com</a></div>
       <div id="validtext">
-        <p>Valid <a href="http://validator.w3.org/check?uri=referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a></p>
+        <p>有效的 <a href="http://validator.w3.org/check?uri=referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a></p>
       </div>
     </div>
   </div>
