--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   <div id="content">
     <div id="header">
       <div id="logo">
-        <! img src="images/logo.jpg" alt="天空百寶盒" width="1024" height="600">
- 	  <img src="images/logo.jpg" alt="天空百寶盒" width="800" height="200"> 
-      <h4>天空百寶盒</h4>
-    </div>
-    <div id="links">
-      <ul>
+ 	<img src="images/logo.jpg" alt="天空百寶盒" width="800" height="200"> 
+      	<h4>天空百寶盒</h4>
+      </div>
+      <div id="links">
+        <ul>
           <li><a href="#">首頁</a></li>
-          <li><a href="collectors.html">收藏家們</a>
+          <li><a href="collectors.html">收藏家們</a></li>
           <li><a href="#">更多浪漫</a></li>
           <li><a href="#">向我們分享</a></li>
         </ul>
@@ -42,12 +41,11 @@
    	<img src="images/S__38961159.jpg" alt="图片4" width="150" height="100">
    	<img src="images/S__38961161.jpg" alt="图片5" width="150" height="100">
     	<img src="images/S__38961160.jpg" alt="图片6" width="150" height="100">
-  </div>
-</div>
+       </div>
         <a href="#">更多 ></a><br />
         <br />
       </div>
-      <div id="rightbar">
+     <div id="rightbar">
         <h2>留言板</h2>
         <p><span class="orangetext">12/08/2020</span><br />
          一口吃下棉花糖 <br />
@@ -67,5 +65,7 @@
     </div>
   </div>
 </div>
+</body>
+</html>
 </body>
 </html>
